package domain;

public enum FormaPago {

	EFECTIVO, CREDITO, DEBITO;
}
